--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,20 +19,30 @@ android {
 }
 
 dependencies {
+    def support_library_version = "27.1.1"
+    def lifecycle_version = "1.1.1"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.0'
+    implementation "com.android.support:appcompat-v7:$support_library_version"
 
-    // layouts
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    // layouts + custom views
+    implementation "com.android.support.constraint:constraint-layout:1.1.2"
+    implementation "com.android.support:recyclerview-v7:$support_library_version"
+    implementation "com.android.support:cardview-v7:$support_library_version"
 
-    // OkHttp + Retrofit + Picasso + gson
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    // LiveData
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
 
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.google.code.gson:gson:2.8.3'
+    // OkHttp + gson
+    implementation "com.squareup.okhttp3:okhttp:3.10.0"
+    implementation "com.google.code.gson:gson:2.8.3"
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // ExoPlayer
+    implementation "com.google.android.exoplayer:exoplayer:2.8.1"
+
+    implementation "com.android.support:support-v4:$support_library_version"
+    testImplementation "junit:junit:4.12"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:3.0.2"
 }
