--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:3.10.0"
     implementation "com.google.code.gson:gson:2.8.3"
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // ExoPlayer
     implementation "com.google.android.exoplayer:exoplayer:2.8.1"
 
